--- a/release/authors.html
+++ b/release/authors.html
@@ -29,14 +29,14 @@
         </ul>
         <div class="nav-actions">
             <!-- Неавторизованный пользователь -->
-            <div class="hidden">
+            <div class="">
                 <a href="#login" class="btn btn-small modal-trigger">
                     <span class="white-text">Войти</span>
                 </a>
             </div>
             <!-- / -->
             <!-- Авторизованный пользователь -->
-            <ul class="profile-menu">
+            <ul class="profile-menu hidden">
                 <li>
                     <i class="mdi mdi-account-circle"></i>
                 </li>
@@ -181,7 +181,7 @@
     </div>
     <div class="info-wrapper">
         <div class="name">
-            <a href="/author.html">Настасья Лью</a>
+            <a href="/author.html">Алексей Павлов</a>
         </div>
         <div class="kv-pair">
             <div class="key">
@@ -343,7 +343,7 @@
     </div>
     <div class="info-wrapper">
         <div class="name">
-            <a href="/author.html">Евгений Костин</a>
+            <a href="/author.html">Ирина Костина</a>
         </div>
         <div class="kv-pair">
             <div class="key">
@@ -414,7 +414,7 @@
 </div><div class="author-entry">
     <div class="avatar-wrapper">
         <a href="/author.html">
-            <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=5"></div>
+            <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=16"></div>
         </a>
     </div>
     <div class="info-wrapper">
@@ -505,7 +505,7 @@
     </div>
     <div class="info-wrapper">
         <div class="name">
-            <a href="/author.html">Вахтанг Мураев</a>
+            <a href="/author.html">Ким Ю</a>
         </div>
         <div class="kv-pair">
             <div class="key">
@@ -581,7 +581,7 @@
     </div>
     <div class="info-wrapper">
         <div class="name">
-            <a href="/author.html">Ольга Кононович</a>
+            <a href="/author.html">Елена Сергеева</a>
         </div>
         <div class="kv-pair">
             <div class="key">
@@ -652,12 +652,12 @@
 </div><div class="author-entry">
     <div class="avatar-wrapper">
         <a href="/author.html">
-            <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=8"></div>
+            <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=19"></div>
         </a>
     </div>
     <div class="info-wrapper">
         <div class="name">
-            <a href="/author.html">Настасья Лью</a>
+            <a href="/author.html">Владимир Субботин</a>
         </div>
         <div class="kv-pair">
             <div class="key">
@@ -733,14 +733,14 @@
     </div>
     <div class="info-wrapper">
         <div class="name">
-            <a href="/author.html">Екатерина Сапельникова</a>
+            <a href="/author.html">Анджей Стаховски</a>
         </div>
         <div class="kv-pair">
             <div class="key">
                 <i class="mdi mdi-map-marker"></i>
                 <span>Территориально</span>
             </div>
-            <div class="value">Россия, Усурийск</div>
+            <div class="value">Польша, Варшава</div>
         </div>
         <div class="kv-pair">
             <div class="key">
@@ -804,12 +804,12 @@
 </div><div class="author-entry">
     <div class="avatar-wrapper">
         <a href="/author.html">
-            <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=10"></div>
+            <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=22"></div>
         </a>
     </div>
     <div class="info-wrapper">
         <div class="name">
-            <a href="/author.html">Евгений Костин</a>
+            <a href="/author.html">Алина Вердяева</a>
         </div>
         <div class="kv-pair">
             <div class="key">
@@ -885,7 +885,7 @@
     </div>
     <div class="info-wrapper">
         <div class="name">
-            <a href="/author.html">Антонина Павлова</a>
+            <a href="/author.html">Светлана Прохорова</a>
         </div>
         <div class="kv-pair">
             <div class="key">
@@ -956,12 +956,12 @@
 </div><div class="author-entry">
     <div class="avatar-wrapper">
         <a href="/author.html">
-            <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=12"></div>
+            <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=34"></div>
         </a>
     </div>
     <div class="info-wrapper">
         <div class="name">
-            <a href="/author.html">Вахтанг Мураев</a>
+            <a href="/author.html">Светлана Мураева</a>
         </div>
         <div class="kv-pair">
             <div class="key">
@@ -1124,7 +1124,7 @@
     </div>
     <div class="info-wrapper">
         <div class="name">
-            <a href="/author.html">Настасья Лью</a>
+            <a href="/author.html">Алексей Павлов</a>
         </div>
         <div class="kv-pair">
             <div class="key">
@@ -1286,7 +1286,7 @@
     </div>
     <div class="info-wrapper">
         <div class="name">
-            <a href="/author.html">Евгений Костин</a>
+            <a href="/author.html">Ирина Костина</a>
         </div>
         <div class="kv-pair">
             <div class="key">
@@ -1357,7 +1357,7 @@
 </div><div class="author-entry">
     <div class="avatar-wrapper">
         <a href="/author.html">
-            <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=5"></div>
+            <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=16"></div>
         </a>
     </div>
     <div class="info-wrapper">
@@ -1448,7 +1448,7 @@
     </div>
     <div class="info-wrapper">
         <div class="name">
-            <a href="/author.html">Вахтанг Мураев</a>
+            <a href="/author.html">Ким Ю</a>
         </div>
         <div class="kv-pair">
             <div class="key">
@@ -1524,7 +1524,7 @@
     </div>
     <div class="info-wrapper">
         <div class="name">
-            <a href="/author.html">Ольга Кононович</a>
+            <a href="/author.html">Елена Сергеева</a>
         </div>
         <div class="kv-pair">
             <div class="key">
@@ -1595,12 +1595,12 @@
 </div><div class="author-entry">
     <div class="avatar-wrapper">
         <a href="/author.html">
-            <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=8"></div>
+            <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=19"></div>
         </a>
     </div>
     <div class="info-wrapper">
         <div class="name">
-            <a href="/author.html">Настасья Лью</a>
+            <a href="/author.html">Владимир Субботин</a>
         </div>
         <div class="kv-pair">
             <div class="key">
@@ -1676,14 +1676,14 @@
     </div>
     <div class="info-wrapper">
         <div class="name">
-            <a href="/author.html">Екатерина Сапельникова</a>
+            <a href="/author.html">Анджей Стаховски</a>
         </div>
         <div class="kv-pair">
             <div class="key">
                 <i class="mdi mdi-map-marker"></i>
                 <span>Территориально</span>
             </div>
-            <div class="value">Россия, Усурийск</div>
+            <div class="value">Польша, Варшава</div>
         </div>
         <div class="kv-pair">
             <div class="key">
@@ -1747,12 +1747,12 @@
 </div><div class="author-entry">
     <div class="avatar-wrapper">
         <a href="/author.html">
-            <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=10"></div>
+            <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=22"></div>
         </a>
     </div>
     <div class="info-wrapper">
         <div class="name">
-            <a href="/author.html">Евгений Костин</a>
+            <a href="/author.html">Алина Вердяева</a>
         </div>
         <div class="kv-pair">
             <div class="key">
@@ -1828,7 +1828,7 @@
     </div>
     <div class="info-wrapper">
         <div class="name">
-            <a href="/author.html">Антонина Павлова</a>
+            <a href="/author.html">Светлана Прохорова</a>
         </div>
         <div class="kv-pair">
             <div class="key">
@@ -1899,12 +1899,12 @@
 </div><div class="author-entry">
     <div class="avatar-wrapper">
         <a href="/author.html">
-            <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=12"></div>
+            <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=34"></div>
         </a>
     </div>
     <div class="info-wrapper">
         <div class="name">
-            <a href="/author.html">Вахтанг Мураев</a>
+            <a href="/author.html">Светлана Мураева</a>
         </div>
         <div class="kv-pair">
             <div class="key">
@@ -2014,7 +2014,7 @@
                 </div>
                 <div class="col m8 s12">
                     <!-- Данные еще не отправлены -->
-                    <div class="row hidden">
+                    <div class="row">
                         <div class="col s12">
                             <div class="form-header">Обратная связь</div>
                         </div>
@@ -2045,7 +2045,7 @@
                     </div>
                     <!-- / -->
                     <!-- Данные успешно отправлены -->
-                    <div class="footer-success center-align">
+                    <div class="footer-success center-align hidden">
                         <p>
                             <i class="mdi mdi-check-circle green-text"></i>
                         </p>
