--- a/release/index.html
+++ b/release/index.html
@@ -29,14 +29,14 @@
         </ul>
         <div class="nav-actions">
             <!-- Неавторизованный пользователь -->
-            <div class="hidden">
+            <div class="">
                 <a href="#login" class="btn btn-small modal-trigger">
                     <span class="white-text">Войти</span>
                 </a>
             </div>
             <!-- / -->
             <!-- Авторизованный пользователь -->
-            <ul class="profile-menu">
+            <ul class="profile-menu hidden">
                 <li>
                     <i class="mdi mdi-account-circle"></i>
                 </li>
@@ -208,7 +208,7 @@
     </div>
     <div class="info-small">
         <div class="name">
-            <a href="/product.html">Папоротник</a>
+            <a href="/product.html">Цветок</a>
         </div>
         <div class="author">
             <a href="/author.html">Екатерина Сапельникова</a>
@@ -258,7 +258,7 @@
     </div>
     <div class="info-small">
         <div class="name">
-            <a href="/product.html">Абстракция</a>
+            <a href="/product.html">Ваза с незабудками</a>
         </div>
         <div class="author">
             <a href="/author.html">Михаил Черенков</a>
@@ -308,7 +308,7 @@
     </div>
     <div class="info-small">
         <div class="name">
-            <a href="/product.html">Портрет баронессы</a>
+            <a href="/product.html">Вечерний коньяк в одиночку</a>
         </div>
         <div class="author">
             <a href="/author.html">Марко Капелло</a>
@@ -358,7 +358,7 @@
     </div>
     <div class="info-small">
         <div class="name">
-            <a href="/product.html">Колесо обозрения</a>
+            <a href="/product.html">Домашний сторож</a>
         </div>
         <div class="author">
             <a href="/author.html">Екатерина Сапельникова</a>
@@ -408,7 +408,7 @@
     </div>
     <div class="info-small">
         <div class="name">
-            <a href="/product.html">На мосту</a>
+            <a href="/product.html">Натюрморт «Лимон»</a>
         </div>
         <div class="author">
             <a href="/author.html">Снежана Авдеева</a>
@@ -458,7 +458,7 @@
     </div>
     <div class="info-small">
         <div class="name">
-            <a href="/product.html">Еще абстракция</a>
+            <a href="/product.html">Лотосы</a>
         </div>
         <div class="author">
             <a href="/author.html">Михаил Черенков</a>
@@ -508,7 +508,7 @@
     </div>
     <div class="info-small">
         <div class="name">
-            <a href="/product.html">Око</a>
+            <a href="/product.html">Абстракция</a>
         </div>
         <div class="author">
             <a href="/author.html">Анонина Павлова</a>
@@ -558,7 +558,7 @@
     </div>
     <div class="info-small">
         <div class="name">
-            <a href="/product.html">Жук</a>
+            <a href="/product.html">Белые орхидеи</a>
         </div>
         <div class="author">
             <a href="/author.html">Иван Григорович</a>
@@ -608,10 +608,10 @@
     </div>
     <div class="info-small">
         <div class="name">
-            <a href="/product.html">Зимний двор</a>
+            <a href="/product.html">Натюрморт «Гранат»</a>
         </div>
         <div class="author">
-            <a href="/author.html">Александр Сухоруков</a>
+            <a href="/author.html">Снежана Авдеева</a>
         </div>
     </div>
 </div><div class="gallery-entry @@colors">
@@ -658,7 +658,7 @@
     </div>
     <div class="info-small">
         <div class="name">
-            <a href="/product.html">Приплыли</a>
+            <a href="/product.html">Музыкальное лето</a>
         </div>
         <div class="author">
             <a href="/author.html">Ольга Кононович</a>
@@ -708,7 +708,7 @@
     </div>
     <div class="info-small">
         <div class="name">
-            <a href="/product.html">Птах</a>
+            <a href="/product.html">Гранат</a>
         </div>
         <div class="author">
             <a href="/author.html">Евгений Костин</a>
@@ -785,7 +785,7 @@
             <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=2"></div>
         </div>
         <div class="info-wrapper">
-            <div class="name">Настасья Лью</div>
+            <div class="name">Алексей Павлов</div>
             <div class="kv-pair">
                 <div class="key">
                     <i class="mdi mdi-map-marker"></i>
@@ -881,7 +881,7 @@
             <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=4"></div>
         </div>
         <div class="info-wrapper">
-            <div class="name">Евгений Костин</div>
+            <div class="name">Ирина Костина</div>
             <div class="kv-pair">
                 <div class="key">
                     <i class="mdi mdi-map-marker"></i>
@@ -926,7 +926,7 @@
 </div><div class="col xl4 l6 m12 s12">
     <div class="author">
         <div class="avatar-wrapper">
-            <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=5"></div>
+            <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=16"></div>
         </div>
         <div class="info-wrapper">
             <div class="name">Антонина Павлова</div>
@@ -977,7 +977,7 @@
             <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=6"></div>
         </div>
         <div class="info-wrapper">
-            <div class="name">Вахтанг Мураев</div>
+            <div class="name">Ким Ю</div>
             <div class="kv-pair">
                 <div class="key">
                     <i class="mdi mdi-map-marker"></i>
@@ -1025,7 +1025,7 @@
             <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=7"></div>
         </div>
         <div class="info-wrapper">
-            <div class="name">Ольга Кононович</div>
+            <div class="name">Елена Сергеева</div>
             <div class="kv-pair">
                 <div class="key">
                     <i class="mdi mdi-map-marker"></i>
@@ -1070,10 +1070,10 @@
 </div><div class="col xl4 l6 m12 s12">
     <div class="author">
         <div class="avatar-wrapper">
-            <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=8"></div>
+            <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=19"></div>
         </div>
         <div class="info-wrapper">
-            <div class="name">Настасья Лью</div>
+            <div class="name">Владимир Субботин</div>
             <div class="kv-pair">
                 <div class="key">
                     <i class="mdi mdi-map-marker"></i>
@@ -1121,13 +1121,13 @@
             <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=9"></div>
         </div>
         <div class="info-wrapper">
-            <div class="name">Екатерина Сапельникова</div>
+            <div class="name">Анджей Стаховски</div>
             <div class="kv-pair">
                 <div class="key">
                     <i class="mdi mdi-map-marker"></i>
                     <span>Территориально</span>
                 </div>
-                <div class="value">Россия, Усурийск</div>
+                <div class="value">Польша, Варшава</div>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -1166,10 +1166,10 @@
 </div><div class="col xl4 l6 m12 s12">
     <div class="author">
         <div class="avatar-wrapper">
-            <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=10"></div>
+            <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=22"></div>
         </div>
         <div class="info-wrapper">
-            <div class="name">Евгений Костин</div>
+            <div class="name">Алина Вердяева</div>
             <div class="kv-pair">
                 <div class="key">
                     <i class="mdi mdi-map-marker"></i>
@@ -1217,7 +1217,7 @@
             <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=11"></div>
         </div>
         <div class="info-wrapper">
-            <div class="name">Антонина Павлова</div>
+            <div class="name">Светлана Прохорова</div>
             <div class="kv-pair">
                 <div class="key">
                     <i class="mdi mdi-map-marker"></i>
@@ -1262,10 +1262,10 @@
 </div><div class="col xl4 l6 m12 s12">
     <div class="author">
         <div class="avatar-wrapper">
-            <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=12"></div>
+            <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=34"></div>
         </div>
         <div class="info-wrapper">
-            <div class="name">Вахтанг Мураев</div>
+            <div class="name">Светлана Мураева</div>
             <div class="kv-pair">
                 <div class="key">
                     <i class="mdi mdi-map-marker"></i>
@@ -1344,7 +1344,7 @@
                 </div>
                 <div class="col m8 s12">
                     <!-- Данные еще не отправлены -->
-                    <div class="row hidden">
+                    <div class="row">
                         <div class="col s12">
                             <div class="form-header">Обратная связь</div>
                         </div>
@@ -1375,7 +1375,7 @@
                     </div>
                     <!-- / -->
                     <!-- Данные успешно отправлены -->
-                    <div class="footer-success center-align">
+                    <div class="footer-success center-align hidden">
                         <p>
                             <i class="mdi mdi-check-circle green-text"></i>
                         </p>
