--- a/src/html/author.html
+++ b/src/html/author.html
@@ -52,9 +52,10 @@
                     <div class="col m6 s12">
                         <div class="text-wrapper">
                             <p>
-                                Франсиско Хосе де Гойя-и-Лусьентес (исп. Francisco José de Goya y Lucientes; 30 марта 1746, 
-                                Фуэндетодос, близ Сарагосы — 16 апреля 1828, Бордо) — испанский художник и гравёр, один 
-                                из первых и наиболее ярких мастеров изобразительного искусства эпохи романтизма.
+                                Обычная художница из южной столицы нашей необъятной Родины. Предпочитаю писать картины
+                                маслом на холсте, иногда эксперементирую в области материалов – в частности очень понравился
+                                уголь, и патель – очень мягкие и податливые материалы, мягкость порождает необходимость
+                                зафиксировать материал, вобщем – в постоянном творческом поиске))
                             </p>
                         </div>
                     </div>
