--- a/src/html/profile.html
+++ b/src/html/profile.html
@@ -29,30 +29,49 @@
                                 </div>
                                 <div class="value"><input type="text" class="hidden-input" value="Россия"></div>
                             </div>
+                            <div class="error-text">Укажите страну</div>
                             <div class="kv-pair">
                                 <div class="key">
                                     <div class="fogged">Город</div>
                                 </div>
                                 <div class="value"><input type="text" class="hidden-input" value="Краснодар"></div>
                             </div>
+                            <div class="error-text">Укажите город</div>
                             <div class="kv-pair">
                                 <div class="key">
                                     <div class="fogged">Фамилия</div>
                                 </div>
                                 <div class="value"><input type="text" class="hidden-input" value="Кононович"></div>
                             </div>
+                            <div class="error-text">Укажите фамилию</div>
                             <div class="kv-pair">
                                 <div class="key">
                                     <div class="fogged">Имя</div>
                                 </div>
                                 <div class="value"><input type="text" class="hidden-input" value="Ольга"></div>
                             </div>
+                            <div class="error-text">Укажите Имя</div>
                             <div class="kv-pair">
                                 <div class="key">
                                     <div class="fogged">Отчество</div>
                                 </div>
                                 <div class="value"><input type="text" class="hidden-input" value="Владимировна"></div>
                             </div>
+                            <div class="error-text">Укажите Отчество</div>
+                            <div class="kv-pair">
+                                <div class="key">
+                                    <div class="fogged">E-mail</div>
+                                </div>
+                                <div class="value"><input type="text" class="hidden-input" value="masterkadaj@gmail.com"></div>
+                            </div>
+                            <div class="error-text">Неверный формат</div>
+                            <div class="kv-pair">
+                                <div class="key">
+                                    <div class="fogged">Телефон</div>
+                                </div>
+                                <div class="value"><input type="text" class="hidden-input" value="+3546лдовыап3"></div>
+                            </div>
+                            <div class="error-text">Неверный телефон</div>
                             <div class="kv-pair">
                                 <div class="key">
                                     <div class="fogged">Дата рождения</div>
@@ -63,6 +82,7 @@
                                     <input type="hidden" name="birthday">
                                 </div>
                             </div>
+                            <div class="error-text">Укажите дату рождения</div>
                             <div class="kv-pair">
                                 <div class="key">
                                     <div class="fogged">Дата регистрации</div>
@@ -76,7 +96,7 @@
                         </div>
                     </div>
                     <div class="col m6 s12">
-                        <textarea class="hidden-input">Франсиско Хосе де Гойя-и-Лусьентес (исп. Francisco José de Goya y Lucientes; 30 марта 1746, Фуэндетодос, близ Сарагосы — 16 апреля 1828, Бордо) — испанский художник и гравёр, один из первых и наиболее ярких мастеров изобразительного искусства эпохи романтизма.</textarea>
+                        <textarea class="hidden-input" placeholder="Коротко о себе">Обычная художница из южной столицы нашей необъятной Родины. Предпочитаю писать картины маслом на холсте, иногда эксперементирую в области материалов – в частности очень понравился уголь, и патель – очень мягкие и податливые материалы, мягкость порождает необходимость зафиксировать материал, вобщем – в постоянном творческом поиске))</textarea>
                     </div>
                     <div class="col s12 right-align">
                         <a href="" class="btn btn-flat">Изменить <span class="gold-text">пароль</span></a>
