--- a/release/author.html
+++ b/release/author.html
@@ -29,14 +29,14 @@
         </ul>
         <div class="nav-actions">
             <!-- Неавторизованный пользователь -->
-            <div class="hidden">
+            <div class="">
                 <a href="#login" class="btn btn-small modal-trigger">
                     <span class="white-text">Войти</span>
                 </a>
             </div>
             <!-- / -->
             <!-- Авторизованный пользователь -->
-            <ul class="profile-menu">
+            <ul class="profile-menu hidden">
                 <li>
                     <i class="mdi mdi-account-circle"></i>
                 </li>
@@ -127,9 +127,10 @@
                     <div class="col m6 s12">
                         <div class="text-wrapper">
                             <p>
-                                Франсиско Хосе де Гойя-и-Лусьентес (исп. Francisco José de Goya y Lucientes; 30 марта 1746, 
-                                Фуэндетодос, близ Сарагосы — 16 апреля 1828, Бордо) — испанский художник и гравёр, один 
-                                из первых и наиболее ярких мастеров изобразительного искусства эпохи романтизма.
+                                Обычная художница из южной столицы нашей необъятной Родины. Предпочитаю писать картины
+                                маслом на холсте, иногда эксперементирую в области материалов – в частности очень понравился
+                                уголь, и патель – очень мягкие и податливые материалы, мягкость порождает необходимость
+                                зафиксировать материал, вобщем – в постоянном творческом поиске))
                             </p>
                         </div>
                     </div>
@@ -235,7 +236,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Папоротник</a>
+            <a href="/product.html">Цветок</a>
         </div>
         <div class="author">
             <a href="/author.html">Екатерина Сапельникова</a>
@@ -285,7 +286,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Абстракция</a>
+            <a href="/product.html">Ваза с незабудками</a>
         </div>
         <div class="author">
             <a href="/author.html">Михаил Черенков</a>
@@ -335,7 +336,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Портрет баронессы</a>
+            <a href="/product.html">Вечерний коньяк в одиночку</a>
         </div>
         <div class="author">
             <a href="/author.html">Марко Капелло</a>
@@ -385,7 +386,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Колесо обозрения</a>
+            <a href="/product.html">Домашний сторож</a>
         </div>
         <div class="author">
             <a href="/author.html">Екатерина Сапельникова</a>
@@ -435,7 +436,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">На мосту</a>
+            <a href="/product.html">Натюрморт «Лимон»</a>
         </div>
         <div class="author">
             <a href="/author.html">Снежана Авдеева</a>
@@ -485,7 +486,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Еще абстракция</a>
+            <a href="/product.html">Лотосы</a>
         </div>
         <div class="author">
             <a href="/author.html">Михаил Черенков</a>
@@ -535,7 +536,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Око</a>
+            <a href="/product.html">Абстракция</a>
         </div>
         <div class="author">
             <a href="/author.html">Анонина Павлова</a>
@@ -585,7 +586,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Жук</a>
+            <a href="/product.html">Белые орхидеи</a>
         </div>
         <div class="author">
             <a href="/author.html">Иван Григорович</a>
@@ -635,10 +636,10 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Зимний двор</a>
+            <a href="/product.html">Натюрморт «Гранат»</a>
         </div>
         <div class="author">
-            <a href="/author.html">Александр Сухоруков</a>
+            <a href="/author.html">Снежана Авдеева</a>
         </div>
     </div>
 </div><div class="col l4 m6 s12 gallery-entry @@colors">
@@ -685,7 +686,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Приплыли</a>
+            <a href="/product.html">Музыкальное лето</a>
         </div>
         <div class="author">
             <a href="/author.html">Ольга Кононович</a>
@@ -735,7 +736,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Птах</a>
+            <a href="/product.html">Гранат</a>
         </div>
         <div class="author">
             <a href="/author.html">Евгений Костин</a>
@@ -835,7 +836,7 @@
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Настасья Лью</a>
+                <a href="/author.html">Алексей Павлов</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -939,7 +940,7 @@
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Евгений Костин</a>
+                <a href="/author.html">Ирина Костина</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -986,7 +987,7 @@
     <div class="author">
         <div class="avatar-wrapper">
             <a href="/author.html">
-                <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=5"></div>
+                <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=16"></div>
             </a>
         </div>
         <div class="info-wrapper">
@@ -1043,7 +1044,7 @@
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Вахтанг Мураев</a>
+                <a href="/author.html">Ким Ю</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -1095,7 +1096,7 @@
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Ольга Кононович</a>
+                <a href="/author.html">Елена Сергеева</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -1142,12 +1143,12 @@
     <div class="author">
         <div class="avatar-wrapper">
             <a href="/author.html">
-                <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=8"></div>
+                <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=19"></div>
             </a>
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Настасья Лью</a>
+                <a href="/author.html">Владимир Субботин</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -1199,14 +1200,14 @@
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Екатерина Сапельникова</a>
+                <a href="/author.html">Анджей Стаховски</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
                     <i class="mdi mdi-map-marker"></i>
                     <span>Территориально</span>
                 </div>
-                <div class="value">Россия, Усурийск</div>
+                <div class="value">Польша, Варшава</div>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -1246,12 +1247,12 @@
     <div class="author">
         <div class="avatar-wrapper">
             <a href="/author.html">
-                <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=10"></div>
+                <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=22"></div>
             </a>
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Евгений Костин</a>
+                <a href="/author.html">Алина Вердяева</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -1303,7 +1304,7 @@
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Антонина Павлова</a>
+                <a href="/author.html">Светлана Прохорова</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -1350,12 +1351,12 @@
     <div class="author">
         <div class="avatar-wrapper">
             <a href="/author.html">
-                <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=12"></div>
+                <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=34"></div>
             </a>
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Вахтанг Мураев</a>
+                <a href="/author.html">Светлана Мураева</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -1433,7 +1434,7 @@
                 </div>
                 <div class="col m8 s12">
                     <!-- Данные еще не отправлены -->
-                    <div class="row hidden">
+                    <div class="row">
                         <div class="col s12">
                             <div class="form-header">Обратная связь</div>
                         </div>
@@ -1464,7 +1465,7 @@
                     </div>
                     <!-- / -->
                     <!-- Данные успешно отправлены -->
-                    <div class="footer-success center-align">
+                    <div class="footer-success center-align hidden">
                         <p>
                             <i class="mdi mdi-check-circle green-text"></i>
                         </p>
