--- a/release/gallery.html
+++ b/release/gallery.html
@@ -29,14 +29,14 @@
         </ul>
         <div class="nav-actions">
             <!-- Неавторизованный пользователь -->
-            <div class="hidden">
+            <div class="">
                 <a href="#login" class="btn btn-small modal-trigger">
                     <span class="white-text">Войти</span>
                 </a>
             </div>
             <!-- / -->
             <!-- Авторизованный пользователь -->
-            <ul class="profile-menu">
+            <ul class="profile-menu hidden">
                 <li>
                     <i class="mdi mdi-account-circle"></i>
                 </li>
@@ -294,7 +294,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Папоротник</a>
+            <a href="/product.html">Цветок</a>
         </div>
         <div class="author">
             <a href="/author.html">Екатерина Сапельникова</a>
@@ -344,7 +344,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Абстракция</a>
+            <a href="/product.html">Ваза с незабудками</a>
         </div>
         <div class="author">
             <a href="/author.html">Михаил Черенков</a>
@@ -394,7 +394,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Портрет баронессы</a>
+            <a href="/product.html">Вечерний коньяк в одиночку</a>
         </div>
         <div class="author">
             <a href="/author.html">Марко Капелло</a>
@@ -444,7 +444,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Колесо обозрения</a>
+            <a href="/product.html">Домашний сторож</a>
         </div>
         <div class="author">
             <a href="/author.html">Екатерина Сапельникова</a>
@@ -494,7 +494,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">На мосту</a>
+            <a href="/product.html">Натюрморт «Лимон»</a>
         </div>
         <div class="author">
             <a href="/author.html">Снежана Авдеева</a>
@@ -544,7 +544,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Еще абстракция</a>
+            <a href="/product.html">Лотосы</a>
         </div>
         <div class="author">
             <a href="/author.html">Михаил Черенков</a>
@@ -594,7 +594,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Око</a>
+            <a href="/product.html">Абстракция</a>
         </div>
         <div class="author">
             <a href="/author.html">Анонина Павлова</a>
@@ -644,7 +644,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Жук</a>
+            <a href="/product.html">Белые орхидеи</a>
         </div>
         <div class="author">
             <a href="/author.html">Иван Григорович</a>
@@ -694,10 +694,10 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Зимний двор</a>
+            <a href="/product.html">Натюрморт «Гранат»</a>
         </div>
         <div class="author">
-            <a href="/author.html">Александр Сухоруков</a>
+            <a href="/author.html">Снежана Авдеева</a>
         </div>
     </div>
 </div><div class="col l4 m6 s12 gallery-entry @@colors">
@@ -744,7 +744,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Приплыли</a>
+            <a href="/product.html">Музыкальное лето</a>
         </div>
         <div class="author">
             <a href="/author.html">Ольга Кононович</a>
@@ -794,7 +794,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Птах</a>
+            <a href="/product.html">Гранат</a>
         </div>
         <div class="author">
             <a href="/author.html">Евгений Костин</a>
@@ -888,7 +888,7 @@
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Настасья Лью</a>
+                <a href="/author.html">Алексей Павлов</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -992,7 +992,7 @@
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Евгений Костин</a>
+                <a href="/author.html">Ирина Костина</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -1039,7 +1039,7 @@
     <div class="author">
         <div class="avatar-wrapper">
             <a href="/author.html">
-                <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=5"></div>
+                <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=16"></div>
             </a>
         </div>
         <div class="info-wrapper">
@@ -1096,7 +1096,7 @@
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Вахтанг Мураев</a>
+                <a href="/author.html">Ким Ю</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -1148,7 +1148,7 @@
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Ольга Кононович</a>
+                <a href="/author.html">Елена Сергеева</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -1195,12 +1195,12 @@
     <div class="author">
         <div class="avatar-wrapper">
             <a href="/author.html">
-                <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=8"></div>
+                <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=19"></div>
             </a>
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Настасья Лью</a>
+                <a href="/author.html">Владимир Субботин</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -1252,14 +1252,14 @@
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Екатерина Сапельникова</a>
+                <a href="/author.html">Анджей Стаховски</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
                     <i class="mdi mdi-map-marker"></i>
                     <span>Территориально</span>
                 </div>
-                <div class="value">Россия, Усурийск</div>
+                <div class="value">Польша, Варшава</div>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -1299,12 +1299,12 @@
     <div class="author">
         <div class="avatar-wrapper">
             <a href="/author.html">
-                <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=10"></div>
+                <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=22"></div>
             </a>
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Евгений Костин</a>
+                <a href="/author.html">Алина Вердяева</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -1356,7 +1356,7 @@
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Антонина Павлова</a>
+                <a href="/author.html">Светлана Прохорова</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -1403,12 +1403,12 @@
     <div class="author">
         <div class="avatar-wrapper">
             <a href="/author.html">
-                <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=12"></div>
+                <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=34"></div>
             </a>
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Вахтанг Мураев</a>
+                <a href="/author.html">Светлана Мураева</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -1486,7 +1486,7 @@
                 </div>
                 <div class="col m8 s12">
                     <!-- Данные еще не отправлены -->
-                    <div class="row hidden">
+                    <div class="row">
                         <div class="col s12">
                             <div class="form-header">Обратная связь</div>
                         </div>
@@ -1517,7 +1517,7 @@
                     </div>
                     <!-- / -->
                     <!-- Данные успешно отправлены -->
-                    <div class="footer-success center-align">
+                    <div class="footer-success center-align hidden">
                         <p>
                             <i class="mdi mdi-check-circle green-text"></i>
                         </p>
