--- a/release/product.html
+++ b/release/product.html
@@ -29,14 +29,14 @@
         </ul>
         <div class="nav-actions">
             <!-- Неавторизованный пользователь -->
-            <div class="hidden">
+            <div class="">
                 <a href="#login" class="btn btn-small modal-trigger">
                     <span class="white-text">Войти</span>
                 </a>
             </div>
             <!-- / -->
             <!-- Авторизованный пользователь -->
-            <ul class="profile-menu">
+            <ul class="profile-menu hidden">
                 <li>
                     <i class="mdi mdi-account-circle"></i>
                 </li>
@@ -304,7 +304,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Папоротник</a>
+            <a href="/product.html">Цветок</a>
         </div>
         <div class="author">
             <a href="/author.html">Екатерина Сапельникова</a>
@@ -354,7 +354,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Абстракция</a>
+            <a href="/product.html">Ваза с незабудками</a>
         </div>
         <div class="author">
             <a href="/author.html">Михаил Черенков</a>
@@ -404,7 +404,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Портрет баронессы</a>
+            <a href="/product.html">Вечерний коньяк в одиночку</a>
         </div>
         <div class="author">
             <a href="/author.html">Марко Капелло</a>
@@ -454,7 +454,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Колесо обозрения</a>
+            <a href="/product.html">Домашний сторож</a>
         </div>
         <div class="author">
             <a href="/author.html">Екатерина Сапельникова</a>
@@ -504,7 +504,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">На мосту</a>
+            <a href="/product.html">Натюрморт «Лимон»</a>
         </div>
         <div class="author">
             <a href="/author.html">Снежана Авдеева</a>
@@ -554,7 +554,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Еще абстракция</a>
+            <a href="/product.html">Лотосы</a>
         </div>
         <div class="author">
             <a href="/author.html">Михаил Черенков</a>
@@ -604,7 +604,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Око</a>
+            <a href="/product.html">Абстракция</a>
         </div>
         <div class="author">
             <a href="/author.html">Анонина Павлова</a>
@@ -654,7 +654,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Жук</a>
+            <a href="/product.html">Белые орхидеи</a>
         </div>
         <div class="author">
             <a href="/author.html">Иван Григорович</a>
@@ -704,10 +704,10 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Зимний двор</a>
+            <a href="/product.html">Натюрморт «Гранат»</a>
         </div>
         <div class="author">
-            <a href="/author.html">Александр Сухоруков</a>
+            <a href="/author.html">Снежана Авдеева</a>
         </div>
     </div>
 </div><div class="swiper-entry swiper-slide @@colors">
@@ -754,7 +754,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Приплыли</a>
+            <a href="/product.html">Музыкальное лето</a>
         </div>
         <div class="author">
             <a href="/author.html">Ольга Кононович</a>
@@ -804,7 +804,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Птах</a>
+            <a href="/product.html">Гранат</a>
         </div>
         <div class="author">
             <a href="/author.html">Евгений Костин</a>
@@ -924,7 +924,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Папоротник</a>
+            <a href="/product.html">Цветок</a>
         </div>
         <div class="author">
             <a href="/author.html">Екатерина Сапельникова</a>
@@ -974,7 +974,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Абстракция</a>
+            <a href="/product.html">Ваза с незабудками</a>
         </div>
         <div class="author">
             <a href="/author.html">Михаил Черенков</a>
@@ -1024,7 +1024,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Портрет баронессы</a>
+            <a href="/product.html">Вечерний коньяк в одиночку</a>
         </div>
         <div class="author">
             <a href="/author.html">Марко Капелло</a>
@@ -1074,7 +1074,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Колесо обозрения</a>
+            <a href="/product.html">Домашний сторож</a>
         </div>
         <div class="author">
             <a href="/author.html">Екатерина Сапельникова</a>
@@ -1124,7 +1124,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">На мосту</a>
+            <a href="/product.html">Натюрморт «Лимон»</a>
         </div>
         <div class="author">
             <a href="/author.html">Снежана Авдеева</a>
@@ -1174,7 +1174,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Еще абстракция</a>
+            <a href="/product.html">Лотосы</a>
         </div>
         <div class="author">
             <a href="/author.html">Михаил Черенков</a>
@@ -1224,7 +1224,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Око</a>
+            <a href="/product.html">Абстракция</a>
         </div>
         <div class="author">
             <a href="/author.html">Анонина Павлова</a>
@@ -1274,7 +1274,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Жук</a>
+            <a href="/product.html">Белые орхидеи</a>
         </div>
         <div class="author">
             <a href="/author.html">Иван Григорович</a>
@@ -1324,10 +1324,10 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Зимний двор</a>
+            <a href="/product.html">Натюрморт «Гранат»</a>
         </div>
         <div class="author">
-            <a href="/author.html">Александр Сухоруков</a>
+            <a href="/author.html">Снежана Авдеева</a>
         </div>
     </div>
 </div><div class="swiper-entry swiper-slide @@colors">
@@ -1374,7 +1374,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Приплыли</a>
+            <a href="/product.html">Музыкальное лето</a>
         </div>
         <div class="author">
             <a href="/author.html">Ольга Кононович</a>
@@ -1424,7 +1424,7 @@
     </div>
         <div class="info-small">
         <div class="name">
-            <a href="/product.html">Птах</a>
+            <a href="/product.html">Гранат</a>
         </div>
         <div class="author">
             <a href="/author.html">Евгений Костин</a>
@@ -1511,7 +1511,7 @@
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Настасья Лью</a>
+                <a href="/author.html">Алексей Павлов</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -1615,7 +1615,7 @@
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Евгений Костин</a>
+                <a href="/author.html">Ирина Костина</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -1662,7 +1662,7 @@
     <div class="author">
         <div class="avatar-wrapper">
             <a href="/author.html">
-                <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=5"></div>
+                <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=16"></div>
             </a>
         </div>
         <div class="info-wrapper">
@@ -1719,7 +1719,7 @@
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Вахтанг Мураев</a>
+                <a href="/author.html">Ким Ю</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -1771,7 +1771,7 @@
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Ольга Кононович</a>
+                <a href="/author.html">Елена Сергеева</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -1818,12 +1818,12 @@
     <div class="author">
         <div class="avatar-wrapper">
             <a href="/author.html">
-                <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=8"></div>
+                <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=19"></div>
             </a>
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Настасья Лью</a>
+                <a href="/author.html">Владимир Субботин</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -1875,14 +1875,14 @@
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Екатерина Сапельникова</a>
+                <a href="/author.html">Анджей Стаховски</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
                     <i class="mdi mdi-map-marker"></i>
                     <span>Территориально</span>
                 </div>
-                <div class="value">Россия, Усурийск</div>
+                <div class="value">Польша, Варшава</div>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -1922,12 +1922,12 @@
     <div class="author">
         <div class="avatar-wrapper">
             <a href="/author.html">
-                <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=10"></div>
+                <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=22"></div>
             </a>
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Евгений Костин</a>
+                <a href="/author.html">Алина Вердяева</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -1979,7 +1979,7 @@
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Антонина Павлова</a>
+                <a href="/author.html">Светлана Прохорова</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -2026,12 +2026,12 @@
     <div class="author">
         <div class="avatar-wrapper">
             <a href="/author.html">
-                <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=12"></div>
+                <div class="avatar lazy" data-src="https://i.pravatar.cc/300?u=34"></div>
             </a>
         </div>
         <div class="info-wrapper">
             <div class="name">
-                <a href="/author.html">Вахтанг Мураев</a>
+                <a href="/author.html">Светлана Мураева</a>
             </div>
             <div class="kv-pair">
                 <div class="key">
@@ -2109,7 +2109,7 @@
                 </div>
                 <div class="col m8 s12">
                     <!-- Данные еще не отправлены -->
-                    <div class="row hidden">
+                    <div class="row">
                         <div class="col s12">
                             <div class="form-header">Обратная связь</div>
                         </div>
@@ -2140,7 +2140,7 @@
                     </div>
                     <!-- / -->
                     <!-- Данные успешно отправлены -->
-                    <div class="footer-success center-align">
+                    <div class="footer-success center-align hidden">
                         <p>
                             <i class="mdi mdi-check-circle green-text"></i>
                         </p>
