--- a/release/register.html
+++ b/release/register.html
@@ -29,14 +29,14 @@
         </ul>
         <div class="nav-actions">
             <!-- Неавторизованный пользователь -->
-            <div class="hidden">
+            <div class="">
                 <a href="#login" class="btn btn-small modal-trigger">
                     <span class="white-text">Войти</span>
                 </a>
             </div>
             <!-- / -->
             <!-- Авторизованный пользователь -->
-            <ul class="profile-menu">
+            <ul class="profile-menu hidden">
                 <li>
                     <i class="mdi mdi-account-circle"></i>
                 </li>
@@ -200,7 +200,7 @@
                 </div>
                 <div class="col m8 s12">
                     <!-- Данные еще не отправлены -->
-                    <div class="row hidden">
+                    <div class="row">
                         <div class="col s12">
                             <div class="form-header">Обратная связь</div>
                         </div>
@@ -231,7 +231,7 @@
                     </div>
                     <!-- / -->
                     <!-- Данные успешно отправлены -->
-                    <div class="footer-success center-align">
+                    <div class="footer-success center-align hidden">
                         <p>
                             <i class="mdi mdi-check-circle green-text"></i>
                         </p>
