--- a/src/html/parts/footer.html
+++ b/src/html/parts/footer.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="col m8 s12">
                     <!-- Данные еще не отправлены -->
-                    <div class="row hidden">
+                    <div class="row">
                         <div class="col s12">
                             <div class="form-header">Обратная связь</div>
                         </div>
@@ -52,7 +52,7 @@
                     </div>
                     <!-- / -->
                     <!-- Данные успешно отправлены -->
-                    <div class="footer-success center-align">
+                    <div class="footer-success center-align hidden">
                         <p>
                             <i class="mdi mdi-check-circle green-text"></i>
                         </p>
